--- a/index.html
+++ b/index.html
@@ -1,61 +1,132 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="css/docs.css" rel="stylesheet">
 
-    <title>Angelo-s-playground by crazyangelo</title>
-  </head>
+        <title>Haskell 趣學指南 (Learn You a Haskell for Great Good! 中文版)</title>
+        <style>
+          body > p {
+            margin: 10px 90px;
+          }
+        </style>
+    </head>
 
-  <body>
+    <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=463792080338063";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
 
-    <header>
-      <div class="container">
-        <h1>Angelo-s-playground</h1>
-        <h2></h2>
+        <div class="jumbotron masthead">
+            <div class="container">
+                <h1>Haskell 趣學指南</h1>
+                <p>Learn you a Haskell for Great Good 中文版</p>
+                <p>
+                    <a href="zh-tw/chapters.html" class="btn btn-primary btn-large">正體中文</a>
+                    <a href="zh-cn/chapters.html" class="btn btn-primary btn-large">简体中文</a>
+                </p>
+                <ul class="masthead-links">
+                    <li><a href="https://github.com/learnyouahaskell-zh-tw/learnyouahaskell-zh-tw.github.com">GitHub</a></li>
+                    <li><a href="resource.html">Resource</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                </ul>
+            </div>
+        </div>
 
-        <section id="downloads">
-          <a href="https://github.com/crazyangelo/angelo-s-playground/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/crazyangelo/angelo-s-playground/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/crazyangelo/angelo-s-playground" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <div class="bs-docs-social">
+            <div class="container">
+                <ul class="bs-docs-social-buttons">
+                    <li>
+                        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=learnyouahaskell-zh-tw&repo=learnyouahaskell-zh-tw.github.com&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+                    </li>
+                    <li class="tweet-btn">
+                        <g:plusone></g:plusone>
+                    </li>
+                    <li class="tweet-btn">
+                        <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+                    </li>
+                    <li class="tweet-btn">
+                        <div class="fb-like" data-href="http://learnyouahaskell-zh-tw.csie.org" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false" data-font="arial"></div>
+                    </li>
+                    <li class="tweet-btn">
+                        <script type="text/javascript" charset="utf-8">
+                        (function(){
+                          var _w = 90 , _h = 24;
+                          var param = {
+                            url:location.href,
+                            type:'2',
+                            count:'1', /**是否显示分享数，1显示(可选)*/
+                            appkey:'', /**您申请的应用appkey,显示分享来源(可选)*/
+                            title:'', /**分享的文字内容(可选，默认为所在页面的title)*/
+                            pic:'', /**分享图片的路径(可选)*/
+                            ralateUid:'1926339783', /**关联用户的UID，分享微博会@该用户(可选)*/
+                            language:'zh_tw', /**设置语言，zh_cn|zh_tw(可选)*/
+                            rnd:new Date().valueOf()
+                          }
+                          var temp = [];
+                          for( var p in param ){
+                            temp.push(p + '=' + encodeURIComponent( param[p] || '' ) )
+                          }
+                          document.write('<iframe allowTransparency="true" frameborder="0" scrolling="no" src="http://hits.sinajs.cn/A1/weiboshare.html?' + temp.join('&') + '" width="'+ _w+'" height="'+_h+'"></iframe>')
+                        })()
+                        </script>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>Welcome to GitHub Pages.</h3>
+        <hr class="soften">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p class="marketing-byline">
+            這份翻譯是奠基於<a href="http://fleurer-lee.com">Fleurer</a>在 2008 年所翻譯的<a href="http://fleurer-lee.com/lyah/">前八章</a>，將其轉成繁體中文。並繼續翻譯第九章到第十四章，已於 2012 年 10 月完成第一版草稿。可以跟<a href="http://learnyouahaskell.com">原作英文版</a>搭配閱讀
+        </p>
+        <p class="marketing-byline">
+        繁體譯者為 <a href="http://blog-mno2.csie.org">MnO2</a>，電子郵件是 <a href="http://www.google.com/recaptcha/mailhide/d?k=01qGZzwCO24NRGxqCCNDU8ug==&amp;c=b_FCWrgYwvBQ1KAFkIYfRPtXvoKCSAXZr4osw7fRV_g=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501qGZzwCO24NRGxqCCNDU8ug\75\75\46c\75b_FCWrgYwvBQ1KAFkIYfRPtXvoKCSAXZr4osw7fRV_g\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">mno2...@gmail.com</a> ，或者你可以在 <a href="https://plus.google.com/103925382602424793947">google plus</a> 找到我。如果你對於整份教學想要更正，或者想要複製一份到自己的網站，可以從<a href="https://github.com/learnyouahaskell-zh-tw/learnyouahaskell-zh-tw.github.com/tree/source">這邊</a> <code>git clone</code> 一份，歡迎 patch 給我或直接寫 E-mail 跟我說明哪些地方可以改進。工具程式的部份是直接改寫 <a href="http://code.google.com/p/fdoc/" >Fleurer 所寫的小程式</a>，採用<a href="http://dev.perl.org/licenses/"> GPL/Artistic 雙授權</a>
+        </p>
+        <p class="marketing-byline">
+        如果你對 Haskell 十分有興趣，可以到<a href="http://zh-haskell.csie.org/">這邊</a>留下你的 E-mail。或是到 <a href="http://webchat.freenode.net/">freenode</a> 上的頻道 <span>#haskell.tw</span> 加入一群 Haskell 的愛好者。
+        </p>
+        <p>最後更新時間: 2013/01/09</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <footer class="footer">
+        <div class="container">
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>Designed and built with all the love in the world <a href="http://twitter.com/twitter" target="_blank">@twitter</a> by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
+            <p>Icons from <a href="http://glyphicons.com">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+            <ul class="footer-links">
+                <li><a href="https://github.com/learnyouahaskell-zh-tw/learnyouahaskell-zh-tw.github.com/issues">Submit issues</a></li>
+            </ul>
+        </div>
+        </footer>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript">
+            window.___gcfg = {lang: 'zh-TW'};
+            (function() {
+                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+        </script>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        </script>
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-32830659-1']);
+            _gaq.push(['_trackPageview']);
 
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
+    </body>
 </html>
